--- a/scss/_responsi.scss
+++ b/scss/_responsi.scss
@@ -48,5 +48,11 @@
        .col-reposive-right {
             right: -6px;
         }
+        .resposi::before {
+            bottom: 90px !important;
+        }
+        .resposi-content {
+            margin-top: 88px;
+        }
     }
 }
