--- a/style.css
+++ b/style.css
@@ -247,7 +247,6 @@ img {
   .design-left {
     padding-bottom: 104px;
     padding-top: 79px;
-    padding-left: 11px;
   }
 }
 .design-title {
@@ -301,10 +300,20 @@ img {
 }
 @media (max-width: 767px) {
   .design-img {
-    min-height: 104vw;
+    min-height: 127vw;
   }
-  .design-img-img::before {
+  .design-img::before {
     display: block;
+    content: "";
+    background: red;
+    width: 177%;
+    height: 73%;
+    display: block;
+    position: relative;
+    right: 29px;
+    bottom: -481px;
+    transform: rotate(322deg);
+    opacity: 0.5;
   }
 }
 .design-col-right {
@@ -398,6 +407,9 @@ img {
     flex: 0 0 100%;
     max-width: 100%;
   }
+  .feature .feature-list {
+    margin-top: 31px;
+  }
 }
 
 .resposi {
@@ -448,6 +460,12 @@ img {
   }
   .resposi .col-reposive-right {
     right: -6px;
+  }
+  .resposi .resposi::before {
+    bottom: 90px !important;
+  }
+  .resposi .resposi-content {
+    margin-top: 88px;
   }
 }
 
@@ -804,10 +822,42 @@ img {
     gap: 9px;
   }
 }
+@media (max-width: 880px) {
+  .header-title {
+    font-size: 3em;
+    margin-left: -25px;
+  }
+  .over .my-input {
+    padding: 14px 14px 14px 14px;
+  }
+  .over-form {
+    margin-left: -65px;
+    gap: 9px;
+  }
+  .awesone-text {
+    margin-left: 25px !important;
+  }
+  .design::before {
+    content: "";
+    background: red;
+    width: 154%;
+    height: 33%;
+    display: block;
+    position: relative;
+    right: 29px;
+    bottom: -713px;
+    transform: rotate(319deg);
+    opacity: 0.5;
+  }
+}
 @media (max-width: 826px) {
   .header-title {
     font-size: 3em;
     margin-left: -25px;
+  }
+  .over-form {
+    margin-left: -58px !important;
+    gap: 7px;
   }
 }
 @media (max-width: 767px) {
@@ -823,7 +873,7 @@ img {
     display: block;
   }
   .over-form {
-    margin-left: 7px;
+    margin-left: 7px !important;
     gap: 9px;
   }
   .over-days {
@@ -834,6 +884,18 @@ img {
   }
   .footer::before {
     display: block;
+  }
+  .resposi::before {
+    content: "";
+    background: red;
+    width: 59%;
+    height: 110%;
+    /* display: block; */
+    /* position: absolute; */
+    /* left: -270px; */
+    bottom: 84px;
+    /* transform: rotate(228deg); */
+    /* opacity: 0.5; */
   }
 }
 @media (max-width: 540px) {
