--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -56,5 +56,8 @@
          flex: 0 0 100%;
          max-width: 100%;
         }
+        .feature-list {
+            margin-top: 31px;
+        }
      }
     }
